Stop project btns' text wrapping

--- a/src/styles.css
+++ b/src/styles.css
@@ -154,6 +154,7 @@ button:active {
     color: var(--clr-4);
     font-size: 1.5rem;
     font-family: 'falling-sky';
+    white-space: nowrap;
 }
 
 .projects>button:hover {
